# merlin

./: Cargo.toml  LICENSE  README.md  build.rs
docs/: book.toml
docs/src/: SUMMARY.md  basic-usage.md  changelog.md  installation.md  issues.md  overview.md
docs/src/features/: index.md
docs/src/features/coords/: attach.md  cogadd.md  cogedit.md  cogperms.md  cogrm.md  coordadd.md  coordedit.md  coordrm.md  find.md  index.md
docs/src/modules/: clearance.md  index.md  permissions.md  switches.md
src/: lib.rs  main.rs
src/modules/: mod.rs  register.rs
src/modules/coords/: addcog.rs  addcoord.rs  attach.rs  category.rs  cog.rs  cogadd.rs  cogedit.rs  cogperms.rs  cogrm.rs  collection.rs  config.rs  coord.rs  coordadd.rs  coordedit.rs  coordrm.rs  editcog.rs  entry.rs  find.rs  mod.rs  module.rs
src/modules/core/: clearance.rs  keys.rs  mod.rs  module.rs  perm.rs  perms.rs  ping.rs  reload.rs  save.rs  switch.rs  uptime.rs  version.rs
src/sys/: clearance.rs  command.rs  config.rs  handler.rs  masterswitch.rs  mod.rs  module.rs  options.rs
src/sys/mongo/: collections.rs  counter.rs  details.rs  item.rs  mod.rs
