[package]
name = "merlin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
dirs = "5.0.1"
home = "0.5.9"
jsonc-to-json = "0.1.1"
serde = { version = "1.0.210", features = ["derive"] }
serde-inline-default = "0.2.1"
serde_default = "0.2.0"
serde_json = "1.0.128"
serenity = { version = "0.12.2", features = ["client", "gateway", "rustls_backend", "model"] }
shell-words = "1.1.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }

[features]
default = [ "modcore" ]
modcore = []
